--- a/vagrant/docker/Vagrantfile
+++ b/vagrant/docker/Vagrantfile
@@ -2,6 +2,7 @@
 
 $script = <<END
 yum install -y docker
+setenforce 0
 systemctl start docker.service
 systemctl enable docker.service
 docker run -d -p 8888:8888 jupyter/minimal-notebook
@@ -18,7 +19,7 @@ Vagrant.configure("2") do |config|
     #config.vm.box_check_update = true # check for updates on every time you start the machine
     config.vm.hostname = "coderefinery-docker" # set up hostname
     config.vm.network :forwarded_port, guest: 8888, host: 8080, auto_correct: true # forward virtual machine's port 8888 to host's port 8080
-    config.vm.network "private_network", ip: "192.168.1.12"
+    config.vm.network "private_network", ip: "192.168.70.12" # example network, change as you like
     
     config.vm.provision "shell",
       inline: $script # example of using inline script, the script installs docker and runs a Docker container
